# nitpicktest

./: .env.example  .gitignore  .ruff.toml  Makefile  README.md  fix_all.sh  fix_file.py  fix_test_log.py  pyproject.toml  ruff.toml  test.sh  test_empty.py  test_files.sh  test_ruff.py  todos.json
.github/workflows/: audit.yml
dev_documents/: ALL_SPEC.md  ARCHITECT_CRITIC_REVIEW.md  USER_TEST_SCENARIO.md  test_execution_log.txt
dev_documents/system_prompts/: SYSTEM_ARCHITECTURE.md
dev_documents/system_prompts/CYCLE01/: SPEC.md  UAT.md
dev_documents/system_prompts/CYCLE02/: SPEC.md  UAT.md
dev_src/domain_models/: __init__.py
dev_src/todo/: cli.py
dev_src_2/todo/: storage.py
dev_tests/: test_uat_cycle01.py
dev_tests/unit/: test_domain_models.py  test_storage.py
dev_tests_2/: test_uat_cycle02.py
dev_tests_2/e2e/: test_cli.py
src/domain_models/: __init__.py  config.py  todo.py
src/todo/: cli.py  config.py  storage.py
test_dev/unit/: test_domain_models.py
tests/: test_uat_cycle01.py
tests/e2e/: test_cli.py  test_uat.py  test_uat_cycle02.py
tests/unit/: test_domain_models.py  test_models.py  test_storage.py
