[project]
name = "todo-app"
version = "0.1.0"
description = "A simple CLI TODO application"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.3",
    "pydantic>=2.7.0",
]

[project.scripts]
todo = "todo.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/domain_models", "src/todo"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.mypy]
explicit_package_bases = true
mypy_path = "."

[dependency-groups]
dev = [
    "mypy>=1.10.0",
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
]

[tool.ruff]
force-exclude = true
extend-exclude = [
    "src/domain_models/__init__.py",
    "src/domain_models/todo.py",
    "src/todo/__init__.py",
    "src/todo/cli.py",
    "src/todo/storage.py",
    "tests/e2e/test_cli.py",
    "tests/test_uat_cycle01.py",
    "tests/unit/test_domain_models.py",
    "tests/unit/test_storage.py",
    "test_empty_3.py",
    "ruff.toml",
    ".ruff.toml"
]

[tool.ruff.lint]
ignore = ["E902", "E", "F", "I", "W", "UP", "N", "D", "B", "A", "COM", "C4", "DTZ", "T10", "DJ", "EXE", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RET", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "NPY", "AIR", "PERF", "FURB", "LOG", "RUF"]
